Fixed position of collapse icon #14

--- a/themes/loconomics/assets/css/components/_Faqs.scss
+++ b/themes/loconomics/assets/css/components/_Faqs.scss
@@ -25,6 +25,7 @@
             font-size: 1.3em;
             margin-right: 1.3em;
             width: 1em;
+            text-align: center;
             display: inline-block;
         }
 
